fix nav primary overflow in user page

--- a/app/assets/stylesheets/views/users.css.scss
+++ b/app/assets/stylesheets/views/users.css.scss
@@ -24,7 +24,7 @@ html.users_activities {
       color: $text-muted;
       margin-bottom: 20px;
 
-      @media screen and (min-width: $screen-sm-min) {
+      @media (min-width: $screen-sm-min) {
         border-bottom: 0;
         margin-bottom: 0;
         padding-left: 2em;
@@ -36,12 +36,12 @@ html.users_activities {
       @include make-md-column(9, $gutter: 40px);
       @include make-md-column-pull(3);
 
-      @media screen and (min-width: $screen-sm-min) {
+      @media (min-width: $screen-sm-min) {
         padding-left: 2em;
         padding-right: 2em;
       }
 
-      @media screen and (min-width: $screen-md-min) {
+      @media (min-width: $screen-md-min) {
         border-right: $border-default;
         min-height: 800px;
       }
@@ -66,7 +66,7 @@ html.users_activities {
       > li {
         margin-bottom: 0;
 
-        @media screen and (min-width: $screen-sm-min) {
+        @media (min-width: $screen-sm-min) {
           width: percentage(4 / 12);
         }
       }
@@ -77,7 +77,7 @@ html.users_activities {
     border-bottom: $border-default;
     margin-bottom: 20px;
 
-    @media screen and (min-width: $screen-sm-min) {
+    @media (min-width: $screen-sm-min) {
       margin-bottom: 30px;
     }
 
@@ -89,17 +89,18 @@ html.users_activities {
         line-height: 20px;
         margin-left: 2px;
 
-        @media screen and (min-width: $screen-md-min) {
+        @media (min-width: $screen-md-min) {
           margin-left: 0;
           width: .2%;
         }
 
         .fa {
+          display: block;
           margin: 0;
         }
       }
 
-      @media screen and (max-width: $screen-sm-min) {
+      @media (max-width: $screen-xs-max) {
 
         &.active {
           border-bottom: 0;
@@ -120,15 +121,25 @@ html.users_activities {
         @include clearfix;
         text-align: left;
 
-        @media screen and (min-width: $screen-sm-min) {
+        @media (min-width: $screen-sm-min) {
+          position: relative;
           text-align: center;
         }
 
-        > .badge {
-          float: right;
+        .fa {
+          @media (min-width: $screen-sm-min) and (max-width: $screen-md-max) {
+            display: none;
+          }
+        }
 
-          @media screen and (min-width: $screen-sm-min) {
+        em {
+          float: right;
+          font-size: 1em;
+          font-style: normal;
+
+          @media (min-width: $screen-sm-min) {
             float: none;
+            margin-left: 4px;
           }
         }
       }
@@ -142,7 +153,7 @@ html.users_activities {
     dd {
       margin-bottom: 10px;
 
-      @media screen and (min-width: $screen-md-min) {
+      @media (min-width: $screen-md-min) {
         margin-bottom: 1.5em;
       }
     }
@@ -169,7 +180,7 @@ html.users_activities {
       float: left;
       margin-right: 10px;
 
-      @media screen and (min-width: $screen-md-min) {
+      @media (min-width: $screen-md-min) {
         float: none;
       }
 
@@ -178,17 +189,17 @@ html.users_activities {
         height: 60px;
         width: 60px;
 
-        @media screen and (min-width: 500px) {
+        @media (min-width: 500px) {
           height: 110px;
           width: 110px;
         }
 
-        @media screen and (min-width: $screen-sm-min) {
+        @media (min-width: $screen-sm-min) {
           height: 150px;
           width: 150px;
         }
 
-        @media screen and (min-width: $screen-md-min) {
+        @media (min-width: $screen-md-min) {
           height: 180px;
           width: 180px;
         }
@@ -216,7 +227,7 @@ html.users_activities {
         .note {
           display: none;
 
-          @media screen and (min-width: $screen-sm-min) {
+          @media (min-width: $screen-sm-min) {
             display: inline-block;
             height: 18px;
             line-height: 18px;
@@ -231,7 +242,7 @@ html.users_activities {
       display: inline-block;
       overflow: hidden;
 
-      @media screen and (min-width: $screen-md-min) {
+      @media (min-width: $screen-md-min) {
         display: block;
       }
 
@@ -245,7 +256,7 @@ html.users_activities {
       .progress {
         display: none;
 
-        @media screen and (min-width: $screen-xs-min) {
+        @media (min-width: $screen-xs-min) {
           display: block;
           margin-bottom: 0;
 
@@ -254,7 +265,7 @@ html.users_activities {
           }
         }
 
-        @media screen and (min-width: $screen-md-min) {
+        @media (min-width: $screen-md-min) {
           width: 70%;
         }
       }
@@ -265,7 +276,7 @@ html.users_activities {
       display: inline-block;
       overflow: hidden;
 
-      @media screen and (min-width: $screen-md-min) {
+      @media (min-width: $screen-md-min) {
         display: block;
       }
 
@@ -287,7 +298,7 @@ html.users_activities {
     .exchange {
       overflow: hidden;
 
-      @media screen and (min-width: $screen-md-min) {
+      @media (min-width: $screen-md-min) {
         border-bottom: $border-default;
         margin-bottom: 2em;
         padding-bottom: 2.5em;
@@ -295,7 +306,7 @@ html.users_activities {
 
       .btn {
 
-        @media screen and (min-width: $screen-sm-min) {
+        @media (min-width: $screen-sm-min) {
           float: none !important;
         }
       }
@@ -304,7 +315,7 @@ html.users_activities {
         float: left;
         width: 70%;
 
-        @media screen and (min-width: $screen-sm-min) {
+        @media (min-width: $screen-sm-min) {
           margin-right: 10px;
           min-width: 100px;
           width: 55%;
@@ -315,7 +326,7 @@ html.users_activities {
         float: right;
         width: 20%;
 
-        @media screen and (min-width: $screen-sm-min) {
+        @media (min-width: $screen-sm-min) {
           width: auto;
         }
       }
@@ -346,7 +357,7 @@ html.users_activities {
       }
     }
 
-    @media screen and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
 
       .exchange {
         border-bottom: 0;
@@ -455,7 +466,7 @@ html.users_show {
     .nav-pills-list {
       border-bottom-width: 0;
 
-      @media screen and (min-width: $screen-md-min) {
+      @media (min-width: $screen-md-min) {
         border-bottom-width: 1px;
       }
     }
